Add pretty much all strings and add them to the template language file.

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -11,5 +11,46 @@
 	"No uploaded videos. :^((": "",
 	"Spotlight": "",
 	"Welcome to squareBracket!": "",
-	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": ""
+	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "",
+
+	"Login to squareBracket": "",
+	"Incorrect username or password!": "",
+	"What is squareBracket?": "",
+	"squareBracket is a way to get your videos to the people who matter to you. With squareBracket you can:": "",
+	"Show off your favorite videos to the world": "",
+	"Blog the videos you take with your digital camera or cell phone": "",
+	"Securely and privately show videos to your friends and family around the world": "",
+	"... and much, much more!": "",
+	"Username": "",
+	"Password": "",
+
+	"Videos": "",
+
+	"Email": "",
+	"Password (Again)": "",
+	"Submit": "",
+
+	"User Settings": "",
+	"Description": "",
+	"Update": "",
+
+	"Title": "",
+	"Upload": "",
+	"Upload Video": "",
+
+	"Subscribe": "",
+	"Friend": "",
+	"Most recent uploaded video": "",
+
+	"Post": "",
+
+	"views": "",
+
+	"Settings": "",
+	"Profile Settings": "",
+	"Change theme": "",
+	"Back": "",
+	"Light": "",
+	"Dark": "",
+	"Log Out": ""
 }
