Actually finish the french canadian translations

--- a/lib/lang/fr_CA.json
+++ b/lib/lang/fr_CA.json
@@ -1,21 +1,21 @@
 {
-	"Home": "",
-	"Hi there, %s": "",
-	"Browse": "",
-	"Edit my profile": "",
+	"Home": "Acceuil",
+	"Hi there, %s": "deprecated string - not used in upcoming redesign",
+	"Browse": "Naviger",
+	"Edit my profile": "Modifier mon profile",
 	"Welcome to squareBracket": "Bienvenue",
 	"This is like any other video sharing site... for now at least.": "C'est comme les autres sites de vidéo... pour l'instant.",
 	"Get started": "Démarrer",
 	"Login": "Connexion",
 	"From squareBracket": "De squareBracket",
-	"No uploaded videos. :^((": "",
-	"Spotlight": "",
+	"No uploaded videos. :^((": "Aucun video publieé",
+	"Spotlight": "Spotlight",
 	"Welcome to squareBracket!": "Bienvenue à squareBracket !",
 	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "squareBracket est en train d'être réécrit. Vous vous souvenez de l'époque où la programmation était mauvaise ? C'est du passé.",
 
-	"Login to squareBracket": "",
-	"Incorrect username or password!": "",
-	"What is squareBracket?": "",
+	"Login to squareBracket": "Connection",
+	"Incorrect username or password!": "Mauvais nom/mot de passe !",
+	"What is squareBracket?": "C'est quoi, squareBracket?",
 	"squareBracket is a way to get your videos to the people who matter to you. With squareBracket you can:": "squareBracket est un site web pour partager vos vidéos au public. Avec squareBracket vous pouvez : ",
 	"Show off your favorite videos to the world": "Montrez vos vidéos au monde entier.",
 	"Blog the videos you take with your digital camera or cell phone": "Publiez les vidéos prises avec votre appareil",
@@ -30,16 +30,16 @@
 	"Password (Again)": "Mot de passe (encore)",
 	"Submit": "Envoyer(?)",
 
-	"User Settings": "Parametres",
-	"Description": "",
-	"Update": "",
+	"User Settings": "Paramètres",
+	"Description": "Description",
+	"Update": "Mise à jour",
 
 	"Title": "Titre",
-	"Upload": "",
-	"Upload Video": "",
+	"Upload": "Publier",
+	"Upload Video": "Publier une video",
 
-	"Subscribe": "",
-	"Friend": "",
+	"Subscribe": "Abonnér",
+	"Friend": "Ajouter comme ami",
 	"Most recent uploaded video": "La dernière vidéo uploadée",
 
 	"Post": "Publier(?)",
@@ -47,7 +47,7 @@
 	"views": "vues",
 
 	"Settings": "Réglages",
-	"Profile Settings": "Réglages de Profile",
+	"Profile Settings": "Réglages de profile",
 	"Change theme": "Changer de style",
 	"Back": "Retour",
 	"Light": "Clair",
