Add back stuff in login.twig that got lost during the merge, and update translations to reflect new strings.

--- a/lib/lang/sv_SE.json
+++ b/lib/lang/sv_SE.json
@@ -15,12 +15,11 @@
 
 	"Login to squareBracket": "Logga in till squareBracket",
 	"Incorrect username or password!": "Fel användarnamn eller lösenord!",
-	"What is squareBracket?": "Vad är squareBracket?",
-	"squareBracket is a way to get your videos to the people who matter to you. With squareBracket you can:": "squareBracket är ett sätt att få videor till de som betyder något för dig. Med squareBracket kan du:",
+	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "squareBracket är ett sätt att få videor till de som betyder något för dig. Med squareBracket kan du:",
 	"Show off your favorite videos to the world": "Visa dina favoritvideor till världen",
-	"Blog the videos you take with your digital camera or cell phone": "Blogga de videor du tar med din digitalkamera eller telefon",
-	"Securely and privately show videos to your friends and family around the world": "Säkert och privat visa videor till din familj och dina vänner",
-	"... and much, much more!": "... och så mycket mer!",
+	"Post the videos you take with your camera or smartphone": "Blogga de videor du tar med din digitalkamera eller telefon",
+	"Securely show videos to your friends and family around the world": "Säkert och privat visa videor till din familj och dina vänner",
+	"... and much, much more!": "",
 	"Username": "Användarnamn",
 	"Password": "Lösenord",
 
