update login screen strings in fr_CA
updating of localized strings might be needed.

--- a/lib/lang/fr_CA.json
+++ b/lib/lang/fr_CA.json
@@ -16,10 +16,10 @@
 	"Login to squareBracket": "Connection",
 	"Incorrect username or password!": "Mauvais nom/mot de passe !",
 	"What is squareBracket?": "C'est quoi, squareBracket?",
-	"squareBracket is a way to get your videos to the people who matter to you. With squareBracket you can:": "squareBracket est un site web pour partager vos vidéos au public. Avec squareBracket vous pouvez : ",
+	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "squareBracket est un site web pour partager vos vidéos au public. Avec squareBracket vous pouvez : ",
 	"Show off your favorite videos to the world": "Montrez vos vidéos au monde entier.",
-	"Blog the videos you take with your digital camera or cell phone": "Publiez les vidéos prises avec votre appareil",
-	"Securely and privately show videos to your friends and family around the world": "Montrez en toute sécurité des vidéos à vos amis et à votre famille dans le monde entier. ",
+	"Post the videos you take with your camera or smartphone": "Publiez les vidéos prises avec votre appareil",
+	"Securely show videos to your friends and family around the world": "Montrez en toute sécurité des vidéos à vos amis et à votre famille dans le monde entier. ",
 	"... and much, much more!": "... et bien plus encore !",
 	"Username": "Nom utilisateur",
 	"Password": "Mot de passe",
