--- a/lib/lang/ohgodno.json
+++ b/lib/lang/ohgodno.json
@@ -11,7 +11,7 @@
 	"No uploaded videos. :^((": "Nyo upwoaded videos. ;;w;;",
 	"Spotlight": "Spotwight",
 	"Welcome to squareBracket!": "Wewcome to squaweBwacket ^w^",
-	"squaweBwacket has been wewwitten. Wemembew the owd days of inconsistent UI/CSS and gawbage insecuwe code? That's in the past.": "",
+	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "squaweBwacket has been wewwitten. Wemembew the owd days of inconsistent UI/CSS and gawbage insecuwe code? That's in the past.",
 
 	"Login to squareBracket": "Wogin to squaweBwacket",
 	"Incorrect username or password!": "Incowwect usewnyame ow passwowd ;;w;;",
