--- a/lib/lang/fr_CA.json
+++ b/lib/lang/fr_CA.json
@@ -41,8 +41,9 @@
 	"Subscribe": "Abonnér",
 	"Friend": "Ajouter comme ami",
 	"Most recent uploaded video": "La dernière vidéo uploadée",
+	"are you fucking kidding me guys this is literally just the poktube semantic ui profile layout but without the user infomation detail bullshit": "Quand le",
 
-	"Post": "Publier(?)",
+	"Post": "Envoyer",
 
 	"Enter comment here, Markdown can be used here.": "Écrit un commentaire ici. Markdown peut être utilisé.",
 	"views": "vues",
