Move to squareBracket's RelativeTime library fork and implement relative time translations.

--- a/lib/lang/fr_CA.json
+++ b/lib/lang/fr_CA.json
@@ -1,4 +1,6 @@
 {
+	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\CanadianFrench",
+
 	"Home": "Acceuil",
 	"Hi there, %s": "Bienvenue, %s",
 	"Browse": "Vidéos",
