--- a/lib/lang/ru_RU.json
+++ b/lib/lang/ru_RU.json
@@ -1,4 +1,6 @@
 {
+	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\Russian",
+
 	"Home": "Главная",
 	"Hi there, %s": "Привет, %s",
 	"Browse": "Изучить",
