--- a/lib/lang/sv_SE.json
+++ b/lib/lang/sv_SE.json
@@ -1,4 +1,6 @@
 {
+	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\Swedish",
+
 	"Home": "Hem",
 	"Hi there, %s": "Hej där, %s",
 	"Browse": "Bläddra",
