add more strings

--- a/lib/lang/ohgodno.json
+++ b/lib/lang/ohgodno.json
@@ -14,6 +14,8 @@
 	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "squaweBwacket has been wewwitten. Wemembew the owd days of inconsistent UI/CSS and gawbage insecuwe code? That's in the past.",
 
 	"Login to squareBracket": "Wogin to squaweBwacket",
+	"Please enter your username! ": "Pwease entew your usewnyame! ",
+	"Please enter your password! ": "Pwease entew your passwowd! ",
 	"Incorrect username or password!": "Incowwect usewnyame ow passwowd ;;w;;",
 	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "squaweBwacket is a website to shawe youw videos to the pubwic. With squaweBwacket you can:",
 	"Show off your favorite videos to the world": "Show off youw favowite videos to the wowwd",
