--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -16,6 +16,8 @@
 	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "",
 
 	"Login to squareBracket": "",
+	"Please enter your username! ": "",
+	"Please enter your password! ": "",
 	"Incorrect username or password!": "",
 	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "",
 	"Show off your favorite videos to the world": "",
