Add a message on the user page when you get redirected from the settings page.

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -49,6 +49,7 @@
 	"Upload": "",
 	"Upload Video": "",
 
+	"Your profile settings was successfully updated.": "",
 	"Subscribe": "",
 	"Friend": "",
 	"Most recent uploaded video": "",
