--- a/lib/lang/sv_SE.json
+++ b/lib/lang/sv_SE.json
@@ -16,6 +16,8 @@
 	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "squareBracket har blivit omskriven. Kommer du ihåg de gamla dagarna med dåligt gränssnitt och osäker skräpkod? Det är förgånget nu.",
 
 	"Login to squareBracket": "Logga in till squareBracket",
+	"Please enter your username! ": "Skriv in ditt användarnamn!",
+	"Please enter your password! ": "Skriv in ditt lösenord!",
 	"Incorrect username or password!": "Fel användarnamn eller lösenord!",
 	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "squareBracket är ett sätt att få videor till de som betyder något för dig. Med squareBracket kan du:",
 	"Show off your favorite videos to the world": "Visa dina favoritvideor till världen",
@@ -27,6 +29,13 @@
 
 	"Videos": "Videor",
 
+	"Blank username. ": "Tomt användarnamn. ",
+	"Blank email. ": "Tom e-mailadress. ",
+	"Password is too short. ": "Lösenordet är för kort. ",
+	"The passwords don't match. ": "Lösenorden är inte likadana. ",
+	"Username has already been taken. ": "Användarnamnet har redan blivit taget. ",
+	"Username contains invalid characters (Only alphanumeric and underscore allowed). ": "Användarnamnet innehåller ogiltiga tecken (Endast alfanumeriska och understreck tillåtet). ",
+	"Email isn't valid. ": "E-mail är ogiltig. ",
 	"Email": "E-mail",
 	"Password (Again)": "Lösenord (Igen)",
 	"Submit": "Skicka",
@@ -36,9 +45,11 @@
 	"Update": "Uppdatera",
 
 	"Title": "Titel",
+	"Tags": "Taggar",
 	"Upload": "Ladda upp",
 	"Upload Video": "Ladda upp video",
 
+	"Your profile settings was successfully updated.": "Dina profilinställningar har uppdaterats.",
 	"Subscribe": "Prenumerera",
 	"Friend": "Vän",
 	"Most recent uploaded video": "Nyligaste upladdade video",
