--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -9,8 +9,10 @@
 	"This is like any other video sharing site... for now at least.": "",
 	"Get started": "",
 	"Login": "",
-	"From squareBracket": "",
+	"New Videos": "",
+	"Featured Videos": "",
 	"No uploaded videos. :^((": "",
+	"No featured videos. :^((": "",
 	"Spotlight": "",
 	"Welcome to squareBracket!": "",
 	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "",
