insert commit title here

--- a/lib/lang/fr_CA.json
+++ b/lib/lang/fr_CA.json
@@ -11,9 +11,9 @@
 	"Login": "Connexion",
 	"From squareBracket": "De squareBracket",
 	"No uploaded videos. :^((": "Aucun video publieé",
-	"Spotlight": "Spotlight",
+	"What's new?": "Spotlight",
 	"Welcome to squareBracket!": "Bienvenue à squareBracket !",
-	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "squareBracket est en train d'être réécrit. Vous vous souvenez de l'époque où la programmation était mauvaise ? C'est du passé.",
+	"Hello squareBracket users, We are working on a redesigned version for Alpha 3. At the end of Alpha 3, we should have already finalized the UI for at least Beta 1.": "squareBracket est en train d'être réécrit. Vous vous souvenez de l'époque où la programmation était mauvaise ? C'est du passé.",
 
 	"Login to squareBracket": "Connection",
 	"Incorrect username or password!": "Mauvais nom/mot de passe !",
