Russian localization update

--- a/lib/lang/ru_RU.json
+++ b/lib/lang/ru_RU.json
@@ -3,35 +3,38 @@
 
 	"Home": "Главная",
 	"Hi there, %s": "Привет, %s",
-	"Browse": "Изучить",
+	"Browse": "Исследовать",
 	"Edit my profile": "Редактировать профиль",
 	"Welcome to squareBracket": "Добро пожаловать на squareBracket",
 	"This is like any other video sharing site... for now at least.": "Это сайт, на котором можно делиться видео.",
-	"Get started": "Начнём",
+	"Get started": "Давайте начнём",
 	"Login": "Войти",
 	"From squareBracket": "С squareBracket",
-	"No uploaded videos. :^((": "Нет загруженных видео. :^((",
+	"No uploaded videos. :^((": "Загруженных видео пока нет. :^((",
 	"Spotlight": "В центре внимания",
 	"Welcome to squareBracket!": "Добро пожаловать на squareBracket!",
 	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "squareBracket был переписан. Помните те давние дни с дерьмокодом? Это осталось в прошлом.",
 
-	"Login to squareBracket": "Войти на squareBracket",
-	"Incorrect username or password!": "Неверный логин или пароль!",
-	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "squareBracket это сайт, на котором вы можете делиться видео публике. С squareBracket ты можешь:",
-	"Show off your favorite videos to the world": "Показать свои любимые видео миру",
-	"Post the videos you take with your camera or smartphone": "Публиковать свои видео, которые вы сняли на свою камеру или смартфон",
-	"Securely show videos to your friends and family around the world": "Безопасно показывать свои видео друзьям или семье по всему миру",
-	"... and much, much more!": "... и многое другое!",
+	"Login to squareBracket": "Войти в squareBracket",
 	"Username": "Логин",
 	"Password": "Пароль",
 
+	"You have %s subscribers.": "У вас %s подписчиков.",
+	"You have %s views.": "У вас %s просмотров.",
+	"Your account was made %s.": "Ваш аккаунт был создан %s",
 	"Videos": "Видео",
+
+	"New from squareBracket": "Новые видео на squareBracket",
+	"No uploaded videos.": "Никто ещё не загружал видео сюда.",
+	"What's new?": "Что нового?",
+	"Featured videos": "Избранные видео",
+	"No featured videos.": "Избранные видео отсутствуют.",
 
 	"Email": "Электронная почта",
 	"Password (Again)": "Повторите пароль",
 	"Submit": "Отправить",
 
-	"User Settings": "Настройки Пользователя",
+	"User Settings": "Настройки пользователя",
 	"Description": "Описание",
 	"Update": "Обновить",
 
@@ -43,15 +46,18 @@
 	"Friend": "Друг",
 	"Most recent uploaded video": "Недавно опубликованное видео",
 
+	"Latest Uploads": "Последние видео",
+
 	"Post": "Опубликовать",
 
 	"Uploaded by %s on %s": "Опубликовано пользователем %s в %s",
-	"Enter comment here, Markdown can be used here.": "Напишите свой комментарий (поддерживается Markdown).",
-	"views": "просмотр(а, ов)",
+	"Enter comment here, Markdown can be used here.": "Оставьте комментарий (поддерживается Markdown).",
+	"views": "просмотр",
 
 	"Settings": "Настройки",
+	"Profile": "Мой профиль",
 	"Profile Settings": "Настройки профиля",
-	"Change theme": "Изменить тему",
+	"Change theme": "Сменить тему",
 	"Back": "Назад",
 	"Light": "Светлая тема",
 	"Dark": "Тёмная тема",
