--- a/lib/lang/sv_SE.json
+++ b/lib/lang/sv_SE.json
@@ -2,69 +2,70 @@
 	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\Swedish",
 
 	"Home": "Hem",
-	"Hi there, %s": "Hej där, %s",
 	"Browse": "Bläddra",
-	"Edit my profile": "Redigera min profil",
-	"Welcome to squareBracket": "Välkommen till squareBracket",
-	"This is like any other video sharing site... for now at least.": "Detta är som vilken videoplattform som helst... Åtminstonde just nu.",
-	"Get started": "Börja",
-	"Login": "Logga in",
-	"From squareBracket": "Från squareBracket",
-	"No uploaded videos. :^((": "Inga uppladdade videor. :^((",
-	"Spotlight": "Spotlight",
-	"Welcome to squareBracket!": "Välkommen till squareBracket!",
-	"squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.": "squareBracket har blivit omskriven. Kommer du ihåg de gamla dagarna med dåligt gränssnitt och osäker skräpkod? Det är förgånget nu.",
-
-	"Login to squareBracket": "Logga in till squareBracket",
-	"Please enter your username! ": "Skriv in ditt användarnamn!",
-	"Please enter your password! ": "Skriv in ditt lösenord!",
-	"Incorrect username or password!": "Fel användarnamn eller lösenord!",
-	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "squareBracket är ett sätt att få videor till de som betyder något för dig. Med squareBracket kan du:",
-	"Show off your favorite videos to the world": "Visa dina favoritvideor till världen",
-	"Post the videos you take with your camera or smartphone": "Blogga de videor du tar med din digitalkamera eller telefon",
-	"Securely show videos to your friends and family around the world": "Säkert och privat visa videor till din familj och dina vänner",
-	"... and much, much more!": "",
-	"Username": "Användarnamn",
-	"Password": "Lösenord",
-
-	"Videos": "Videor",
-
-	"Blank username. ": "Tomt användarnamn. ",
-	"Blank email. ": "Tom e-mailadress. ",
-	"Password is too short. ": "Lösenordet är för kort. ",
-	"The passwords don't match. ": "Lösenorden är inte likadana. ",
-	"Username has already been taken. ": "Användarnamnet har redan blivit taget. ",
-	"Username contains invalid characters (Only alphanumeric and underscore allowed). ": "Användarnamnet innehåller ogiltiga tecken (Endast alfanumeriska och understreck tillåtet). ",
-	"Email isn't valid. ": "E-mail är ogiltig. ",
-	"Email": "E-mail",
-	"Password (Again)": "Lösenord (Igen)",
-	"Submit": "Skicka",
-
-	"User Settings": "Användarinställningar",
-	"Description": "Beskrivning",
-	"Update": "Uppdatera",
-
-	"Title": "Titel",
-	"Tags": "Taggar",
-	"Upload": "Ladda upp",
-	"Upload Video": "Ladda upp video",
-
-	"Your profile settings was successfully updated.": "Dina profilinställningar har uppdaterats.",
-	"Subscribe": "Prenumerera",
-	"Friend": "Vän",
-	"Most recent uploaded video": "Nyligaste upladdade video",
-
-	"Post": "Lägg upp",
-
-	"Uploaded by %s on %s": "Uppladdad av %s på %s",
-	"Enter comment here, Markdown can be used here.": "Skriv din kommentar, Markdown stöds såklart!",
-	"views": "visningar",
-
 	"Settings": "Inställningar",
+	"Profile": "Profil",
+	"Log Out": "Logga ut",
 	"Profile Settings": "Profilinställningar",
 	"Change theme": "Ändra tema",
 	"Back": "Tillbaka",
 	"Light": "Ljust",
 	"Dark": "Mörkt",
-	"Log Out": "Logga ut"
+	"Bootstrap Default": "Bootstrap Standard",
+	"Upload": "Ladda upp",
+	"Login": "Logga in",
+	"Register": "Registrera",
+
+	"Your profile settings was successfully updated.": "Dina profilinställningar har uppdaterats.",
+	"Subscribe": "Prenumerera",
+	"Latest Uploads": "Senaste Uppladdningar",
+	"There are no videos uploaded by %s.": "Det finns inga uppladdade videor av %s.",
+
+	"Username": "Användarnamn",
+	"Email": "E-mail",
+	"Password": "Lösenord",
+	"Password (Again)": "Lösenord (Igen)",
+	"Submit": "Skicka",
+
+	"Videos": "Videor",
+	"No uploaded videos.": "Inga uppladdade videor.",
+
+	"Incorrect username or password!": "Fel användarnamn eller lösenord!",
+	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "squareBracket är ett sätt att få videor till de som betyder något för dig. Med squareBracket kan du:",
+	"Show off your favorite videos to the world": "Visa dina favoritvideor till världen",
+	"Post the videos you take with your camera or smartphone": "Blogga de videor du tar med din digitalkamera eller telefon",
+	"Securely show videos to your friends and family around the world": "Säkert och privat visa videor till din familj och dina vänner",
+	"... and much, much more!": "...Och så mycket mer!",
+
+	"Warning": "Varning",
+	"By uploading your videos onto squareBracket, you acknowledge about rules that should be common sense.": "Genom att ladda upp videor till squareBracket godkänner du till regler som borde vara sunt förnuft.",
+	"Video Info": "Videoinformation",
+	"Enter the name and description of your video.": "Fyll i titeln och beskrivningen av din video.",
+	"Title": "Titel",
+	"Description": "Beskrivning",
+	"Tags": "Taggar",
+	"Upload Video File": "Ladda up videofil",
+	"Choose the video you want to upload.": "Välj den video du vill ladda upp.",
+	"Upload Video": "Ladda up video",
+
+	"Uploaded on %s": "Uppladdad på den ",
+	"views": "visningar",
+	"Enter comment here, Markdown can be used here.": "Skriv din kommentar, Markdown stöds såklart!",
+	"Post": "Lägg upp",
+
+	"User Settings": "Användarinställingar",
+	"Update": "Uppdatera",
+
+	"New from squareBracket": "Nytt från squareBracket",
+	"Hi there, %s": "Hej där, %s",
+	"You have %s subscribers.": "Du har %s prenumeranter.",
+	"You have %s views.": "Du har %s visningar.",
+	"no": "nej",
+	"Your account was made %s.": "Ditt konto skapades %s.",
+	"Edit my profile": "Redigera min profil",
+	"Welcome to squareBracket!": "Välkommen till squareBracket!",
+	"This is like any other video sharing site... for now at least.": "Detta är som vilken videoplattform som helst... Åtminstonde just nu.",
+	"What's new?": "Vad är nytt?",
+	"Featured videos": "Presenterade videor",
+	"No featured videos.": "Inga videor är presenterade."
 }
