replace placeholder strings

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -63,7 +63,7 @@
 	"Uploaded videos": "",
 	"There are no videos uploaded by %s.": "",
 	"About %s": "",
-	"Lastest Activity": "",
+	"Last Seen": "",
 	"Date Joined": "",
 
 	"Uploaded on %s": "",
