WHY LOCALIZE HTML CODE?

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -82,7 +82,6 @@
 	"Light": "",
 	"Dark": "",
 	"Bootstrap Default": "",
-	"Created by the squareBracket team": "",
-	"<b><span style='font-family:arial'>GAMERAPPA</span></b>": ""
+	"Created by the squareBracket team": ""
 
 }
