--- a/lib/lang/fr_CA.json
+++ b/lib/lang/fr_CA.json
@@ -32,23 +32,38 @@
 	"Password (Again)": "Mot de passe (encore)",
 	"Submit": "Envoyer(?)",
 
-	"User Settings": "Paramètres",
+	"User Settings": "Paramètres d'utilisateur",
+	"Settings": "Réglages",
+	"Profile settings": "Réglages profile",
+	"Adjust your settings.": "Ajustez vos paramètres.",
 	"Description": "Description",
-	"Update": "Mise à jour",
+	"Update": "Mettre à jour",
+	
+	"Your profile settings was successfully updated.": "Vos paramètres ont été mis à jour.",
+	"Uploaded videos": "Vidéos publiées",
+	"There are no videos uploaded by %s.": "Il n'y a actuellement aucune vidéo publiée par %s.",
+	"About %s": "À propos de %s",
+	"Last Seen": "Vu",
+	"Date Joined": "Inscrit",
 
 	"Title": "Titre",
 	"Upload": "Publier",
-	"Upload Video": "Publier une video",
+	"Warning": "Avertissement",
+	"By uploading your videos onto squareBracket, you acknowledge about rules that should be common sense.": "En mettant vos vidéos sur squareBracket, vous devez reconnaître les règles de publication.",
+	"Video Info": "Informations",
+	"Enter the name and description of your video.": "Entrez le titre et la description du vidéo.",
+	"Tags": "Mots clés",
+	"Upload Video File": "Fichier vidéo à publier",
+	"Choose the video you want to upload.": "Choisissez le fichier vidéo que vous voulez publier.",
+	"Upload Video": "Publier la video",
 
 	"Subscribe": "Abonnér",
 	"Friend": "Ajouter comme ami",
 	"Most recent uploaded video": "La dernière vidéo uploadée",
-
 	"Post": "Envoyer",
 
 	"Enter comment here, Markdown can be used here.": "Écrit un commentaire ici. Markdown peut être utilisé.",
 	"views": "vues",
-	"Uploaded by %s on %s": "Publiée par %s le %s",
 
 	"Settings": "Réglages",
 	"Profile Settings": "Réglages profile",
@@ -56,5 +71,8 @@
 	"Back": "Retour",
 	"Light": "Clair",
 	"Dark": "Sombre",
-	"Log Out": "Deconnection"
+	"Bootstrap Default": "Bootstrap de base",
+	"Log Out": "Deconnection",
+	"Created by the squareBracket team": "Créé par l'équipe de squareBracket",
+	"<b><span style='font-family:arial'>GAMERAPPA</span></b>": "<big><span style='font-family:tahoma'>chaziz</span></big>"
 }
