Revert "you don't need to localize names"
This reverts commit a243101f9274c63960192087437cd9025a1cf0c3.

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -29,6 +29,7 @@
 	"Login": "",
 	"What's new?": "",
 	"Hello squareBracket users, We are working on a redesigned version for Alpha 3. At the end of Alpha 3, we should have already finalized the UI for at least Beta 1.": "",
+	"Chaziz/Gamerappa": "",
 	"Featured videos": "",
 	"No featured videos.": "",
 
