Revert "WHY LOCALIZE HTML CODE?"
This reverts commit 814dd1c83b029b84d7ffb5c3519280df4cdd21c8.

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -83,6 +83,7 @@
 	"Light": "",
 	"Dark": "",
 	"Bootstrap Default": "",
-	"Created by the squareBracket team": ""
+	"Created by the squareBracket team": "",
+	"<b><span style='font-family:arial'>GAMERAPPA</span></b>": ""
 
 }
