--- a/lib/lang/fr_CA.json
+++ b/lib/lang/fr_CA.json
@@ -2,27 +2,23 @@
 	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\CanadianFrench",
 
 	"Home": "Acceuil",
+	"New from squareBracket": "Récemment publiées sur squareBracket",
 	"Hi there, %s": "Bienvenue, %s",
 	"Browse": "Vidéos",
 	"Edit my profile": "Mon profile",
-	"Welcome to squareBracket": "Bienvenue",
+	"Welcome to squareBracket": "Bienvenue sur squareBracket",
 	"This is like any other video sharing site... for now at least.": "C'est comme les autres sites de vidéo... pour l'instant.",
 	"Get started": "Démarrer",
 	"Login": "Connexion",
 	"From squareBracket": "De squareBracket",
 	"No uploaded videos. :^((": "Aucun video publieé",
 	"What's new?": "Spotlight",
-	"Welcome to squareBracket!": "Bienvenue à squareBracket !",
-	"Hello squareBracket users, We are working on a redesigned version for Alpha 3. At the end of Alpha 3, we should have already finalized the UI for at least Beta 1.": "squareBracket est en train d'être réécrit. Vous vous souvenez de l'époque où la programmation était mauvaise ? C'est du passé.",
+	"Welcome to squareBracket!": "Bienvenue sur squareBracket !",
+	"Hello squareBracket users, We are working on a redesigned version for Alpha 3. At the end of Alpha 3, we should have already finalized the UI for at least Beta 1.": "Bonjour, les utilisateurs de squareBracket, Nous travaillons sur un nouveau design de site Web pour Alpha 3.",
+	"Chaziz/Gamerappa": "Chaziz",
 
 	"Login to squareBracket": "Connection",
-	"Incorrect username or password!": "Mauvais nom/mot de passe !",
-	"What is squareBracket?": "C'est quoi, squareBracket?",
-	"squareBracket is a website to share your videos to the public. With squareBracket you can:": "squareBracket est un site web pour partager vos vidéos au public. Avec squareBracket vous pouvez : ",
-	"Show off your favorite videos to the world": "Montrez vos vidéos au monde entier.",
-	"Post the videos you take with your camera or smartphone": "Publiez les vidéos prises avec votre appareil",
-	"Securely show videos to your friends and family around the world": "Montrez en toute sécurité des vidéos à vos amis et à votre famille dans le monde entier. ",
-	"... and much, much more!": "... et bien plus encore !",
+	"Incorrect username or password!": "Mauvais nom/mot de passe.",
 	"Username": "Nom utilisateur",
 	"Password": "Mot de passe",
 
@@ -58,20 +54,19 @@
 	"Upload Video": "Publier la video",
 
 	"Subscribe": "Abonnér",
-	"Friend": "Ajouter comme ami",
-	"Most recent uploaded video": "La dernière vidéo uploadée",
 	"Post": "Envoyer",
 
 	"Enter comment here, Markdown can be used here.": "Écrit un commentaire ici. Markdown peut être utilisé.",
 	"views": "vues",
 
+	"Search": "Rechercher",
 	"Settings": "Réglages",
 	"Profile Settings": "Réglages profile",
-	"Change theme": "Changer de style",
+	"Change theme": "Changer l'apparence",
 	"Back": "Retour",
-	"Light": "Clair",
-	"Dark": "Sombre",
-	"Bootstrap Default": "Bootstrap de base",
+	"Light": "Thème clair",
+	"Dark": "Thème sombre",
+	"Bootstrap Default": "Thème de base",
 	"Log Out": "Deconnection",
 	"Created by the squareBracket team": "Créé par l'équipe de squareBracket",
 	"<b><span style='font-family:arial'>GAMERAPPA</span></b>": "<big><span style='font-family:tahoma'>chaziz</span></big>"
