add poktube thing on login screen

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -38,6 +38,7 @@
 
 	"Incorrect username or password!": "",
 	"Please sign in": "",
+	"Had an account on PokTube? You can now log into squareBracket using your PokTube credentials.": "",
 	"Username": "",
 	"Password": "",
 
