redo settings page

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -46,13 +46,16 @@
 	"Password (Again)": "",
 	"Register": "",
 
-	"User Settings": "",
-	"Profile settings": "",
-	"Partnership": "",
 	"Settings": "",
+	"Account": "",
+	"Profile": "",
+	"Partnership": "",
+	"Profile settings": "",
 	"Change the appearance of your profile.": "",
 	"Description": "",
 	"Update": "",
+	"Partner with squareBracket": "",
+	"Apply for Partner": "",
 
 	"Upload": "",
 	"Warning": "",
