--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -80,7 +80,7 @@
 	"Uploaded on %s": "",
 	"views": "",
 	"Enter comment here, Markdown can be used here.": "",
-	"Post": "",
+	"Send": "",
 
 	"Search": "",
 	"Theme": "",
